backend/k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
      - name: catalog-service
        image: us-central1-docker.pkg.dev/csc-8113/bookstore-repo/catalog-service:v8
        ports:
        - containerPort: 5001
      dnsPolicy: ClusterFirst        
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
