backend/k8s/catalog-service-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
      version: blue
  template:
    metadata:
      labels:
        app: catalog-service
        version: blue
    spec:
      containers:
      - name: catalog-service
        image: us-central1-docker.pkg.dev/csc-8113/bookstore-repo/catalog-service:v8
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "50m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 5001
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service-blue
spec:
  selector:
    app: catalog-service
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
