backend/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: us-central1-docker.pkg.dev/csc-8113/bookstore-repo/order-service:v3
        ports:
        - containerPort: 5003
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5003
  type: ClusterIP
