backend/k8s/order-service-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
      version: green
  template:
    metadata:
      labels:
        app: order-service
        version: green
    spec:
      containers:
      - name: order-service
        image: us-central1-docker.pkg.dev/csc-8113/bookstore-repo/order-service:v3
        ports:
        - containerPort: 5003
        resources:
          limits:
            cpu: "50m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 5003
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-green
spec:
  selector:
    app: order-service
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5003
  type: ClusterIP
