backend/k8s/user-service-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
      version: blue
  template:
    metadata:
      labels:
        app: user-service
        version: blue
    spec:
      containers:
      - name: user-service
        image: us-central1-docker.pkg.dev/csc-8113/bookstore-repo/user-service:v3
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: ClusterIP
